- Fixed some of the Code Smells found by sonarqube - Added the readme